@@ -132,7 +132,7 @@ table.mw-codereview-meta td {
 }
 
 .mw-codereview-diff .meta {
-	color: darkcyan;
+	color: #008b8b;
 }
 
 .mw-wordcloud-size-1, .mw-wordcloud-size-2,
