@@ -11,7 +11,13 @@
 		// JQuery should also normalize e.which to be consistent cross-browser,
 		// however the same check is still needed regardless of jQuery.
 
-		if ( e.which === 0 || e.charCode === 0 || e.ctrlKey || e.altKey || e.metaKey ) {
+		// Note: At the moment, for some older opera versions (~< 10.5)
+		// some special keys won't be recognized (aka left arrow key).
+		// Backspace will be, so not big issue.
+
+		if ( e.which === 0 || e.charCode === 0 || e.which === 8 ||
+			e.ctrlKey || e.altKey || e.metaKey )
+		{
 			return true; //a special key (backspace, etc) so don't interfere.
 		}
 
