@@ -14,7 +14,7 @@ jQuery.extend({
 		return str.substr( 0, 1 ).toUpperCase() + str.substr( 1, str.length );
 	},
 	escapeRE : function( str ) {
-		return str.replace ( /([\\{}()\|.?*+-^$\[\]])/g, "\\$1" );
+		return str.replace ( /([\\{}()|.?*+\-^$\[\]])/g, "\\$1" );
 	},
 	isEmpty : function( v ) {
 		var key;
